--- a/partials/footer.hbs
+++ b/partials/footer.hbs
@@ -1,5 +1,7 @@
 <footer role="contentinfo" class="footer">
-  <p><small>© {{date format="YYYY"}}. All Rights Reserved.</small></p>
-  <p><small><a href="http://ghostium.oswaldoacauan.com/" target="_blank">Ghostium Theme</a> by <a href="http://twitter.com/oswaldoacauan" target="_blank">@oswaldoacauan</a></small></p>
-  <p><small>Proudly published with <a href="http://ghost.org" target="_blank">Ghost</a></small></p>
+
+  <p><small>本站点采用<a href="http://creativecommons.org/licenses/by-nc-sa/4.0/">知识共享 署名-非商业性使用-相同方式共享 4.0 国际 许可协议</a></small></p>
+  <p><small>基于 <a href="http://ghost.org/">Ghost</a> 搭建，感谢 <a href="https://www.digitalocean.com/?refcode=30ed2d146762">Digital Ocean</a> 为本站提供稳定的 VPS 服务</small></p>
+  <p><small>&copy; {{date format="YYYY"}} - 本站由 <a href="https://github.com/kimimaro">@kimimaro</a> 创建，采用 <a href="https://github.com/kimimaro/ghostium">ghostium</a> 作为主题</small></p>
+  
 </footer>
