--- a/partials/custom/navigation.hbs
+++ b/partials/custom/navigation.hbs
@@ -35,6 +35,11 @@ Ghostium uses Font Awesome you can find all icons available on the url below
     <i class="fa fa-rss"></i>Subscribe to Feed
   </a>
 </li>
+<li class="drawer-list-item">
+  <a href="http://eepurl.com/bFJu3z">
+    <i class="fa fa-envelope"></i>Subscribe to Email
+  </a>
+</li>
 <li class="drawer-list-divider"></li>
 <li class="drawer-list-item drawer-list-title">
   Follow me
